# mac-master-logger

./: .gitignore  LICENSE  README.md  config.ini  maclogger.py  main.py  pyparsingtest.py  requirements.txt  setup.cfg  setup.py
pygtail/: __init__.py  pygtail.py
