[metadata]
name = maclogger
version = 0.0.1
author = Vaibhav Sharma
author_email = asvaibhavsharma@gmail.com
description = For Logging with MacMaster
url = https://github.com/surajsinghbisht054/mac-master-logger
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True